# aiqfome-dt

./: .dockerignore  .env  .env.example  Dockerfile  Leia-me.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  settings.py  update_cache.py  webserver.py
src/: __init__.py  database.py  dependencies.py  exceptions.py  gateway.py  init_db.py
src/auth/: __init__.py  auth_methods.py  interfaces.py
src/controllers/: __init__.py  auth_controller.py  favorito_controller.py  user_controller.py
src/interfaces/: __init__.py  cliente.py  produto.py
src/models/: __init__.py  base_model.py  clientes.py  favoritos.py
src/routes/: __init__.py  cliente.py  heath_check.py  produto.py
src/services/: __init__.py  cache_service.py  produto_service.py
src/tasks/: __init__.py  cache_updater.py
